log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 04:19:09 PM UTC 2026: 
 tests:  0|6
========================================
b8d1724
Thu May 14 05:14:39 PM UTC 2026: 
 graph.c | 27 +++++++++++++++++++++------
 1 file changed, 21 insertions(+), 6 deletions(-)
 tests:  0|0
c18d42b
Thu May 14 05:20:51 PM UTC 2026: 
 graph.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:51:22: error: initialization of ‘char *’ from incompatible pointer type ‘List *’ [-Wincompatible-pointer-types]
   51 |     char* newLabel = list_create();
      |                      ^~~~~~~~~~~
graph.c:53:43: error: ‘edgesList’ undeclared (first use in this function)
   53 |     map_insert(g->adjacencyMap, newLabel, edgesList); //se inserta en el mapa el nodo
      |                                           ^~~~~~~~~
graph.c:53:43: note: each undeclared identifier is reported only once for each function it appears in
af19505
Thu May 14 05:22:51 PM UTC 2026: 
 graph.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
4c11a70
Thu May 14 05:31:46 PM UTC 2026: 
 graph.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:75:9: error: ‘newEdge’ undeclared (first use in this function); did you mean ‘newEdege’?
   75 |         newEdge->target = strdup(dest); //Se copia el destino
      |         ^~~~~~~
      |         newEdege
graph.c:75:9: note: each undeclared identifier is reported only once for each function it appears in
graph.c:79:23: error: ‘edgeList’ undeclared (first use in this function); did you mean ‘edgesList’?
   79 |         list_pushBack(edgeList, newEdge);
      |                       ^~~~~~~~
      |                       edgesList
graph.c:73:15: error: unused variable ‘newEdege’ [-Werror=unused-variable]
   73 |         Edge* newEdege = (Edge*) malloc (sizeof(Edge));
      |               ^~~~~~~~
graph.c:71:15: error: unused variable ‘edgesList’ [-Werror=unused-variable]
   71 |         List* edgesList = (List*) pair->value;
      |               ^~~~~~~~~
cc1: all warnings being treated as errors
111aaeb
Thu May 14 05:34:03 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:79:23: error: ‘edgeList’ undeclared (first use in this function); did you mean ‘edgesList’?
   79 |         list_pushBack(edgeList, newEdge);
      |                       ^~~~~~~~
      |                       edgesList
graph.c:79:23: note: each undeclared identifier is reported only once for each function it appears in
graph.c:71:15: error: unused variable ‘edgesList’ [-Werror=unused-variable]
   71 |         List* edgesList = (List*) pair->value;
      |               ^~~~~~~~~
cc1: all warnings being treated as errors
cc283af
Thu May 14 05:34:36 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4e5f8d2
